--- a/src/app/avaliation/flexibilidade/banco-wells-dillon/banco-wells-dillon.component.scss
+++ b/src/app/avaliation/flexibilidade/banco-wells-dillon/banco-wells-dillon.component.scss
@@ -12,6 +12,9 @@
   justify-content: flex-start;
   align-items: center;
   color: white;
+  &-content{
+    width: 100%;
+  }
 
   .h1-title {
     width: 100%;
@@ -53,18 +56,7 @@
 
 
 @media only screen and (min-width: 768px){
-  .section{
+  .section-content{
     width: 520px !important;
   }
-/*   form{
-    width: 90% !important;
-    margin: auto;
-
-  }
-
-  .section-info{
-    width: 60%;
-    margin: auto;
-    margin-top: 20px;;
-  } */
 }
