--- a/src/app/avaliation/flexibilidade/flexiteste/flexiteste.component.scss
+++ b/src/app/avaliation/flexibilidade/flexiteste/flexiteste.component.scss
@@ -12,6 +12,14 @@
   justify-content: flex-start;
   align-items: center;
   color: white;
+  &-content{
+    width: 100%;
+    &__info{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  }
 
   .h1-title {
     width: 100%;
@@ -55,6 +63,10 @@ img {
   .mat-tab-header-pagination-controls-enabled .mat-tab-header-pagination {
     display: flex;
   }
+  .mat-form-field-appearance-legacy .mat-form-field-label {
+    color: rgb(250 250 250) !important;
+    font-size: medium !important;
+  }
 
   .mat-form-field-appearance-legacy .mat-form-field-underline {
       background-color: white;
@@ -73,8 +85,21 @@ img {
     color: whitesmoke !important;
   }
 }
+
+.table{
+  font-size: smaller;
+  td, th {
+    border: 1px solid #999;
+    padding: 0.5rem;
+  }
+  margin-top: 12px;
+  margin-bottom: 12px;
+}
+
+
+
 @media only screen and (min-width: 768px) {
-  .section{
+  .section-content{
     width: 520px !important;
   }
 } 
